framework/tests/framework/UnimportedExtends2.java
class UnimportedExtends2 {
    // :: error: cannot find symbol
    class Inner extends UnimportedClass {}
}
